ntp werkt, generation moet anders, yuou go max